--- a/set-zoom-manually/index.html
+++ b/set-zoom-manually/index.html
@@ -8,7 +8,8 @@
     />
     <title>Set zoom manually</title>
     <!-- Note: it is a Development version, not Production version; -->
-    <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20220823152328.0/dist/dbr.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20220823152328.0/dist/dbr.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20220825163711.0/dist/dbr.js"></script>
   </head>
   <body>
     <label for="sel-template">Template: </label>
