--- a/set-zoom-manually/index.html
+++ b/set-zoom-manually/index.html
@@ -10,6 +10,10 @@
     <!-- Note: it is a Development version, not Production version; -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20220823152328.0/dist/dbr.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20220825163711.0/dist/dbr.js"></script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>
+        eruda.init();
+    </script> -->
   </head>
   <body>
     <div>
@@ -120,6 +124,7 @@
       let scanner;
       (async () => {
         scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
+        scanner.dce._updateLayersTimeout = 500;
         document
           .querySelector("#div-ui-container")
           .appendChild(scanner.getUIElement());
