--- a/set-zoom-manually/index.html
+++ b/set-zoom-manually/index.html
@@ -124,7 +124,7 @@
       let scanner;
       (async () => {
         scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
-        // Change the delay when video container resizes. This API has not been public yet.
+        // Change the delay of updating some layers when video container resizes. This API has not been public yet.
         scanner.dce._updateLayersTimeout = 500;
         document
           .querySelector("#div-ui-container")
