--- a/ticket535143/index.html
+++ b/ticket535143/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DBR sample</title>
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.3.1/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.2.12/dist/dbr.js"></script>
+    <!-- <script src="./node_modules/dynamsoft-javascript-barcode/dist/dbr.js"></script> -->
   </head>
   <body>
     <div id="div-ui-container" style="width: 100%; height: 80vh"></div>
@@ -12,6 +13,12 @@
       id="textarea-results"
       style="width: 100%; height: 20vh; margin-top: 20px"
     ></textarea>
+
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>
+      eruda.init();
+    </script>
+
     <script>
       /** LICENSE ALERT - README
        * To use the library, you need to first specify a license key using the API "license" as shown below.
@@ -58,8 +65,16 @@
           await scanner.updateRuntimeSettings("speed");
 
           let settings = await scanner.getRuntimeSettings();
-          settings.deblurModes[0]=Dynamsoft.DBR.EnumDeblurMode.DM_SHARPENING_SMOOTHING;
-          settings.deblurModes[1]=Dynamsoft.DBR.EnumDeblurMode.DM_SHARPENING;
+          settings.region = {
+            regionLeft: 0,
+            regionRight: 100,
+            regionTop: 25,
+            regionBottom: 75,
+            regionMeasuredByPercentage: true,
+          };
+          settings.deblurModes[0] =
+            Dynamsoft.DBR.EnumDeblurMode.DM_SHARPENING_SMOOTHING;
+          settings.deblurModes[1] = Dynamsoft.DBR.EnumDeblurMode.DM_SHARPENING;
           await scanner.updateRuntimeSettings(settings);
 
           await scanner.setResolution(1920, 1080);
