--- a/ticket535143/index.html
+++ b/ticket535143/index.html
@@ -79,9 +79,9 @@
 
           await scanner.setResolution(1920, 1080);
 
-          const scanSettings = await scanner.getScanSettings();
-          scanSettings.whenToPlaySoundforSuccessfulRead = "frame";
-          await scanner.updateScanSettings(scanSettings);
+          // const scanSettings = await scanner.getScanSettings();
+          // scanSettings.whenToPlaySoundforSuccessfulRead = "frame";
+          // await scanner.updateScanSettings(scanSettings);
 
           /**
            * 'open()' opens the camera.
