--- a/mergeGif/merge-gif.html
+++ b/mergeGif/merge-gif.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="width:100%;margin:0;padding:0;">
+<html lang="en" style="background:green">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,21 +19,21 @@
         canvas.width = info.width;
         canvas.height = info.height;
         const ctx2d = canvas.getContext('2d');
-        for(let i = 0, iMax = reader.numFrames() - 1; i < iMax; ++i){
-            const imageData = new ImageData(info.width, info.height);
-            reader.decodeAndBlitFrameRGBA(i, imageData.data);
-            for(let data = imageData.data, j = 0, jMax = data.byteLength; j < jMax; ++j){
-                if(data[j++]>50 || data[j++]>50 || data[j++]>50){
-                    data[j] = 0;
+        ctx2d.fillStyle = 'white';
+        ctx2d.fillRect(0,0,info.width,info.height);
+        const imageData = ctx2d.getImageData(0,0,info.width,info.height);
+        const data = imageData.data;
+        for(let i = 0, iMax = reader.numFrames() - 1, arr = new Uint8Array(info.width * info.height * 4); i < iMax; ++i){
+            reader.decodeAndBlitFrameRGBA(i, arr);
+            for(let j = 0, jMax = data.byteLength; j < jMax; j = j+4){
+                if(arr[j] < 50 && arr[j+1] < 50 && arr[j+2] < 50 && 255 === arr[j+3]){
+                    data[j] = arr[j];
+                    data[j+1] = arr[j+1];
+                    data[j+2] = arr[j+2];
                 }
             }
-            const _canvas = document.createElement('canvas');
-            _canvas.width = info.width;
-            _canvas.height = info.height;
-            _canvas.getContext('2d').putImageData(imageData, 0, 0);
-            //document.body.appendChild(_canvas);
-            ctx2d.drawImage(_canvas, 0, 0);
         }
+        ctx2d.putImageData(imageData,0,0);
         document.body.appendChild(canvas);
     })();
 </script>
